# Agentic_Investigation_Board

./: .env.example  .gitignore  Agentic AI - Finalized Project.docx  Agentic AI - Safety Constraints for finalized project.docx  README.md  REPORT.md  agents_py.docx  context.md  pyproject.toml  skills.docx  threat_model.md
.agents/: AGENTS.md
.agents/skills/extractor-skill/: SKILL.md
.agents/skills/merger-skill/: SKILL.md
.agents/skills/narrator-skill/: SKILL.md
.agents/skills/orchestrator-skill/: SKILL.md
.agents/skills/output-validator-skill/: SKILL.md
.agents/skills/researcher-skill/: SKILL.md
.agents/skills/stride-threat-model/: SKILL.md
app/: agent.py  config.py  graph_store.py  main.py  tools.py  utils.py  vector_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
skills/extractor/: SKILL.md
skills/merger/: SKILL.md
skills/narrator/: SKILL.md
skills/orchestrator/: SKILL.md
skills/researcher/: SKILL.md
tests/unit/: test_utils.py  test_vector_db.py
