[project]
name = "agentic-investigation-board-backend"
version = "0.1.0"
description = "Backend for the Agentic Investigation Board capstone project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0",
    "google-genai>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
